--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -1,26 +1,16 @@
 .project-content {
-    background-color: #030C15;
     color: white;
+    width: 100%;
     height: 100%;
-    padding: 50px;
-    width: 90%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: auto;
+}
+
+.project-title {
+    text-align: center;
+    padding: 50px 0;
 }
 
 .projects img {
-    margin: 15px;
-    width: 40%;
+    width: 50%;
 }
-
-.projects {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 90%;
-}
-
 @media screen and (max-width: 767px) {
  }
