--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -1,16 +1,151 @@
-.project-content {
-    color: white;
-    width: 100%;
-    height: 100%;
+.cont-project {
+  background-color: #030c15;
+  width: 100%;
 }
 
-.project-title {
-    text-align: center;
-    padding: 50px 0;
+.container-projects {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.projects img {
-    width: 50%;
+.title-projects {
+  font-family: 'Abel', sans-serif;
+  padding: 60px 0 30px 0;
+  font-size: 40px;
+  text-align: center;
+  color: white;
 }
+
+.card {
+  position: relative;
+  width: 35vw;
+  height: 45vh;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  margin: 20px;
+  transition: 0.5s;
+}
+
+.card .circle {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.card .circle::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000000;
+  clip-path: circle(120px at center);
+  transition: 0.8s;
+}
+
+.card:hover .circle::before {
+  background: #000000;
+  clip-path: circle(400px at center);
+}
+
+.card .image {
+  border-radius: 10px;
+  position: absolute;
+  top: 58%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 40vh;
+  pointer-events: none;
+  transition: transform translateY;
+  transition-duration: 0.8s;
+}
+
+.card:hover .image {
+  left: -45%;
+}
+
+.card .content {
+  position: relative;
+  width: 90%;
+  left: 20%;
+  padding: 10px 20px 20px 40px;
+  transition: 0.5s;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.card:hover .content {
+  left: 0;
+  opacity: 1;
+  visibility: visible;
+}
+
+.card .content h2 {
+  font-family: "Anton", sans-serif;
+  color: #fff;
+  font-size: 20px;
+  letter-spacing: 5px;
+  margin-bottom: 15px;
+}
+
+.card .content p {
+  color: #fff;
+  margin-bottom: 25px;
+}
+
+.card .content button {
+  border: none;
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  padding: 10px;
+  margin-top: 15px;
+}
+
+.techs img {
+  width: 5%;
+  margin-right: 10px;
+}
+
+
 @media screen and (max-width: 767px) {
- }
+  .container-projects {
+    flex-direction: column;
+    align-items: center;
+    width: 95%;
+  }
+  
+  .card {
+    width: 90%;
+    height: 30vh;
+    margin: 0;
+  }
+  
+  .card .circle::before {
+    clip-path: circle(20px at center);
+  }
+  
+  .card .image {
+    height: 20vh;
+  }
+  
+  .card .content h2 {
+    font-size: 15px;
+  }
+  
+  .card .content p {
+    font-size: 12px;
+  }
+  
+  .card .content button {
+    font-size: 10px;
+    padding: 5px;
+  }
+}
