--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,27 +1,76 @@
-.navbar {
-    position: fixed;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: white;
+/* General styles end */
+a {
+	text-decoration: none;
+	color: inherit;
+    font-family: 'Abel', sans-serif;
+}
+
+.navPc {
+	position: fixed;
+	background-color: rgb(255, 255, 255);
+	border-bottom: 1px solid white;
+	color: #000000;
+	display: flex;
     height: 7vh;
-    width: 100%;
-    z-index: 1;
+	width: 100%;
+	align-items: center;
+	justify-content: space-between;
+	gap: 25px;
+	z-index: 1;
+}
+.navPc ul {
+	list-style: none;
+	display: flex;
+	margin-right: 80px;
+	gap: 25px;
 }
 
-.navbar ul {
+.icon {
+	font-size: 30px;
+	margin-left: 80px;
+}
+.link {
+	position: relative;
+	display: inline-block;
+}
+.link::before {
+	content: '';
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 2px;
+	background-color: #0300b5;
+	border-radius: 4px;
+	scale: 0 1;
+	transform-origin: right;
+	transition: scale 0.25s;
+}
+.link:hover::before {
+	scale: 1;
+	transform-origin: left;
+}
+
+.nav-text a {
+    text-decoration: none;
+    color: #f5f5f5;
+    font-size: 18px;
+    width: 95%;
+    height: 100%;
     display: flex;
-    color: white;
-}
+    align-items: center;
+    padding: 0 16px;
+    border-radius: 4px;
+  }
+  
 
-.navbar ul li {
-    color: black;
-    font-size: 12px;
-    margin-right: 20px;
-}
+  @media screen and (max-width: 768px) {
+    .navPc ul {
+        margin-right: 8px;
+    }
 
-.logo svg {
-    color: black;
-    font-size: 40px;
-    margin-left: 20px;
-}
+    .icon {
+        font-size: 30px;
+        margin-left: 10px;
+    }
+  }
