--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -1,5 +1,5 @@
 .cont-project {
-  background-color: #131d494d;
+  background-color: rgb(224, 224, 224);
   width: 100%;
   margin-bottom: 100px;
 }
@@ -16,7 +16,7 @@
   padding: 60px 0 30px 0;
   font-size: 40px;
   text-align: center;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 .card {
@@ -127,7 +127,7 @@
   .card {
     width: 90%;
     height: 30vh;
-    margin: 0;
+    margin: 15px;
   }
   
   .card .circle::before {
