--- a/src/components/hards/Hards.css
+++ b/src/components/hards/Hards.css
@@ -19,6 +19,17 @@
   object-fit: contain;
 }
 
+.hards img {
+ position: relative;
+ animation: slide 10s infinite linear;
+}
+
+@keyframes slide {
+  0% {left: 0px}
+  50% {left: -200px}
+  100% {left: -450px}
+}
+
 @media screen and (max-width: 767px) {
   .container-hards {
     margin-bottom: 160px;
