--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -153,3 +153,53 @@
     padding: 5px;
   }
 }
+
+@media screen and (min-width: 767px) and (max-width: 1023px) {
+  .container-projects {
+    flex-direction: column;
+    align-items: center;
+    width: 95%;
+  }
+  
+  .card {
+    width: 90%;
+    height: 30vh;
+    margin: 15px;
+  }
+  
+  .card .circle::before {
+    clip-path: circle(20px at center);
+  }
+  
+  .card .image {
+    height: 25vh;
+  }
+  
+  .card .content h2 {
+    font-size: 15px;
+  }
+  
+  .card .content p {
+    font-size: 12px;
+  }
+  
+  .card .content button {
+    font-size: 10px;
+    padding: 5px;
+  }
+  
+}
+
+@media screen and (min-width: 1024px) {
+  .card .image {
+    height: 25vh;
+  }
+
+  .card .circle::before {
+    clip-path: circle(20px at center);
+  }
+
+  .card {
+    margin: 15px;
+  }
+}
