fix: title size

--- a/src/components/aboutme/Aboutme.css
+++ b/src/components/aboutme/Aboutme.css
@@ -113,7 +113,7 @@
     
  }
 
- @media screen and (max-width: 1024px) and (max-width: 1200px){
+ @media screen and (min-width: 1024px) and (max-width: 1200px){
     .container-about {
         height: 65vh;
       }
