--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -124,6 +124,10 @@
     align-items: center;
     width: 95%;
   }
+
+  .title-projects {
+    font-size: 30px;
+  }
   
   .card {
     width: 90%;
@@ -159,6 +163,10 @@
     flex-direction: column;
     align-items: center;
     width: 95%;
+  }
+  
+  .title-projects {
+    font-size: 30px;
   }
   
   .card {
