--- a/src/components/hards/Hards.css
+++ b/src/components/hards/Hards.css
@@ -40,3 +40,14 @@
     width: 15%;
   }
 }
+
+@media screen and (min-width: 767px) and (max-width: 867px) {
+  .container-hards {
+    margin-bottom: 160px;
+    height: 10vh;
+  }
+
+  .hards img {
+    width: 15%;
+  }
+}
