--- a/src/components/aboutme/Aboutme.css
+++ b/src/components/aboutme/Aboutme.css
@@ -88,6 +88,33 @@
     
  }
 
+ @media screen and (min-width: 460px) and (max-width: 767px) {
+    .container-about {
+        display: flex;
+        height: 60vh;
+      }
+
+    .aboutme {
+        margin: auto;
+        width: 90%;
+    }
+    
+    .aboutme h2 {
+       font-size: 22px;
+    }
+    
+    
+    .line-about {
+        height: 20vh;
+    }
+    
+    .aboutme p {
+        font-size: 15px;
+     }
+    
+ }
+
+
  @media screen and (min-width: 767px) and (max-width: 1023px) {
     .container-about {
         height: 60vh;
